[package]
name = "aoc_2020"
version = "0.1.0"
authors = ["Benjamin Jones <benjaminfjones@gmail.com>"]
edition = "2018"

[dependencies]
regex = "1"

[[bin]]
name = "d1"
path = "src/d1/bin/main.rs"

[[bin]]
name = "d2"
path = "src/d2/bin/main.rs"

[[bin]]
name = "d3"
path = "src/d3/bin/main.rs"

[[bin]]
name = "d4"
path = "src/d4/bin/main.rs"

[[bin]]
name = "d5"
path = "src/d5/bin/main.rs"

[[bin]]
name = "d6"
path = "src/d6/bin/main.rs"

[[bin]]
name = "d7"
path = "src/d7/bin/main.rs"

[[bin]]
name = "d8"
path = "src/d8/bin/main.rs"
